--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/mamartinnn/MJHSQUIZ-UTS#readme",
   "description": "",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0"
   }
 }
