--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/mamartinnn/MJHSQUIZ-UTS#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "method-override": "^3.0.0"
+    "joi": "^17.13.3",
+    "method-override": "^3.0.0",
+    "mjhsquiz-uts": "file:",
+    "mongoose": "^8.13.2"
   }
 }
